fixed long letters being cut off in search

--- a/public/style/search.css
+++ b/public/style/search.css
@@ -24,7 +24,7 @@
 .search input {
     width: 100%;
     border: none;
-    height: 60%;
+    height: 80%;
     background: none;
     color: white;
     padding: 10px;
